services/music-assistant/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      hostNetwork: true
      securityContext:
        privileged: true
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      containers:
        - name: music-assistant
          image: ghcr.io/music-assistant/server:2.0.7
          volumeMounts:
            - name: volume
              mountPath: /data
          ports:
            - name: web
              containerPort: 8095
            - name: stream
              containerPort: 8097
